<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:imageView="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.details.MovieDetailsFragment">

    <data class="DetailsFragmentBinding">

        <variable
            name="viewModel"
            type="com.exercise.firstdigitalbank.tmdb.feature.details.MovieDetailsViewModel" />
    </data>

<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@android:color/white"
                android:titleTextColor="@android:color/white"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    imageView:imageUrl='@{@string/tmdb_image_base_url + viewModel.movieDetails.backdropPath}'
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="top"
                    android:minHeight="?attr/actionBarSize"
                    android:title="@{viewModel.movieDetails.name}"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    android:background="@android:color/transparent" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp">

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/content_description"
                android:minWidth="120dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/ic_launcher_background"
                imageView:errorRes="@{@drawable/ic_movie}"
                imageView:imageUrl='@{@string/tmdb_image_base_url + viewModel.movieDetails.posterPath}'
                tools:src="@drawable/ic_launcher_foreground" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_budget_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:text="@string/budget_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_budget_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:text="@{@string/budget_text(Integer.toString(viewModel.movieDetails.budget))}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/tv_budget_label"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="USD 100M" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_release_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/release_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tv_budget_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_release_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{viewModel.movieDetails.releaseDate}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/tv_release_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_budget_text"
                tools:text="2020-10-23" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_runtime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/runtime_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_runtime_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{@string/runtime_text(viewModel.movieDetails.runtime)}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/tv_runtime_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_text"
                tools:text="120 min" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/rating_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tv_runtime_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{@string/rating_text(Double.toString(viewModel.movieDetails.rating))}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/tv_rating_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_runtime_text"
                tools:text="6.9/10" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/status_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@{viewModel.movieDetails.status}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/tv_status_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating_text"
                tools:text="Released" />

            <View
                android:id="@+id/v_separator1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/overview_label"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_separator1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_overview_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@{viewModel.movieDetails.overview}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_label"
                tools:text="Loren ipsum sum sum" />

            <View
                android:id="@+id/v_separator2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_videos_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/videos_label"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_separator2" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_videos_label"
                tools:itemCount="10"
                tools:listitem="@layout/movie_preview_horizontal_item_list" />

            <View
                android:id="@+id/v_separator3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_videos" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_casts_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/casts_label"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_separator3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_casts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_casts_label"
                tools:itemCount="10"
                tools:listitem="@layout/movie_preview_vertical_item_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.widget.NestedScrollView>
</layout>